--- a/SPCK-master/index.html
+++ b/SPCK-master/index.html
@@ -28,7 +28,7 @@
                 <a href="profile.html"> <img src="" alt="Avatar" id="imageindex"></a>
             </div>
             <div class="dropdown-content">
-                <span id="welcome-text"> </span>
+                <span id="welcome-text">chao mung </span>
                 <button id="change-password"> <span>Change password</span></button>
                 <button id="logout"> Logout</button>
             </div>
